# nsp-plugin

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  INCREMENTAL_TRAINING_REGRESSION.md  LICENSE  PUBLIC_DATASETS_GUIDE.md  README.md  STATUS.md  TREINO_SIMPLES.md  check_catalog.py  config.json  config_loader.py  docker-compose.yml  export_models.py  import_models.py  manage_api_keys.py  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  slider_config.py  start_server.sh  stop_server.sh  train_simple.py
NSP-Plugin.lrplugin/: ApplyAIPresetBatchV2.lua  ApplyAIPresetV2.lua  AutoStraighten.lua  BatchProcessor.lua  ChooseModel.lua  Common_V2.lua  EnhancedPreview.lua  FICHEIROS_CORRIGIDOS.md  FixPrefs.lua  ImplicitFeedback.lua  Info.lua  IntelligentCulling.lua  LOGS_INSTRUCTIONS.md  MarkBestPhotos.lua  MatchReferenceStyle.lua  PRESET_CLEANUP.md  PredictionCache.lua  PreviewBeforeAfter.lua  SendFeedback.lua  Settings.lua  ShowStats.lua  StartServer.lua  SyncFeedback.lua  TestApplySettings.lua  TestConnection.lua  TestError.lua  TestMinimal.lua  TestSimple.lua  TriggerRetrain.lua  WorkflowPreset.lua  json.lua
control-center-v2/: BUILD.md  README.md
docs/: README.md
examples/: test_retraining_system.py
install/: setup.bat  setup.sh
licensing/: .env.example  CPANEL_DEPLOYMENT.md  QUICK_START.md  README.md  TEST_RESULTS.md  client.py  requirements.txt  server.py  test_server_exhaustive.py
migrations/: 001_feedback_granular.sql
models/: best_preset_classifier_v2.pth  best_refinement_model_v2.pth  (+8 more)
(+266 files in other folders)
